--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
-/.vscode
-/extras
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
+*.swp
+*.vi
+*~
+*.sass-cache
+
+# OS or Editor folders
+.DS_Store
+.cache
+.project
+.settings
+.tmproj
+nbproject
+Thumbs.db
+
+# NPM packages folder.
+node_modules/
+
+# Brunch output folder.
+public/
+
+#VSCode config files
+.vscode/
