babel integration start

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "test"
+    "clean": "rimraf docs/*",
+    "buildModern": "babel src/js/hymns.js -o docs/js/hymns.js -presets=env",
+    "buildLegacy": "babel --no-babelrc src/js/hymns.js > docs/js/hymns.legacy.js",
+    "build": "echo '=> Building Source Files' && buildModern && buildLegacy"
   },
   "repository": {
     "type": "git",
@@ -23,6 +26,11 @@
   },
   "homepage": "https://github.com/dons20/hymnal#readme",
   "devDependencies": {
-    "gulp": "^4.0.0"
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "rimraf": "^2.6.2",
+    "uglify-es": "^3.3.9",
+    "uglify-js": "^3.4.8",
+    "watch": "^1.0.2"
   }
 }
