--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   },
   "scripts": {
     "clean": "rimraf docs/* && echo Purging old files...",
-    "prebuild": "echo Creating Directories... && mkdirp docs/js docs/css && ROBOCOPY src docs index.html && ROBOCOPY src/img docs/img",
-    "compile-sass": "echo Building and Minifying CSS... && node-sass --output-style compressed src/css/styles.scss | tee docs/css/style.min.css > src/css/styles.min.css",
+    "prebuild": "echo Creating Directories... && mkdirp docs/js docs/css docs/img && npm run copyIndex && npm run copyIMG && npm run copyJS && echo Finished",
+    "copyIndex": "(ROBOCOPY src docs index.html) ^& IF %ERRORLEVEL% LSS 8 SET ERRORLEVEL = 0",
+    "copyIMG": "(ROBOCOPY src/img docs/img) ^& IF %ERRORLEVEL% LSS 8 SET ERRORLEVEL = 0",
+    "copyJS": "(ROBOCOPY src/js docs/js elasticlunr.min.js songs.json) ^& IF %ERRORLEVEL% LSS 8 SET ERRORLEVEL = 0",
+    "compile-sass": "echo Building and Minifying CSS... && node-sass --output-style compressed src/css/styles.scss | tee docs/css/styles.min.css > src/css/styles.min.css",
     "compile-modern-js": "echo Building ES6+ Files... && cross-env BABEL_ENV=modern babel src/js/hymns.js | tee docs/js/hymns.min.js > src/js/hymns.min.js",
     "compile-legacy-js": "echo Building ES5 Files... && cross-env BABEL_ENV=legacy babel src/js/hymns.js | tee docs/js/hymns.legacy.min.js > src/js/hymns.legacy.min.js",
     "build": "echo Building Source Files... && npm run compile-sass && npm run compile-modern-js && npm run compile-legacy-js",
+    "serve": "ws -d docs -z --https",
     "rebuild": "npm run clean && npm run build"
   },
   "repository": {
