Partial UI implementation

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ public/
 oldIndex.html
 .npmrc
 *.critical.html
+old.html
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
