--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "https": "set HTTPS=true&&npm start",
     "start": "react-scripts start",
-    "build": "react-scripts build && sw-precache --config=sw-precache-config.js",
+    "build": "react-scripts build",
+    "buildCache": "react-scripts build && sw-precache --config=sw-precache-config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
