--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
+  "homepage": ".",
   "scripts": {
     "https": "set HTTPS=true&&npm start",
     "start": "react-scripts start",
