--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.6.0",
     "react-junctions": "^0.5.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-window": "^1.4.0"
   },
   "homepage": "./",
   "scripts": {
