--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.8.3",
+    "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "idb-keyval": "^3.1.0",
     "node-sass": "^4.11.0",
@@ -14,7 +14,7 @@
     "react-scripts": "2.1.3",
     "react-window": "^1.5.0"
   },
-  "homepage": "./",
+  "homepage": "http://./",
   "scripts": {
     "https": "set HTTPS=true&&npm start",
     "start": "react-scripts start",
