--- a/package.json
+++ b/package.json
@@ -1,38 +1,44 @@
 {
-  "name": "hymnal",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^3.9.0",
-    "@material-ui/icons": "^3.0.2",
-    "idb-keyval": "^3.1.0",
-    "node-sass": "^4.11.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-junctions": "^0.5.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "react-window": "^1.5.0"
-  },
-  "homepage": "http://./",
-  "scripts": {
-    "https": "set HTTPS=true&&npm start",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "buildCache": "react-scripts build && sw-precache --config=sw-precache-config.js",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "sw-precache": "^5.2.1"
-  }
+    "name": "hymnal",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@material-ui/core": "^4.1.1",
+        "@material-ui/icons": "^4.2.0",
+        "idb-keyval": "^3.2.0",
+        "node-sass": "^4.12.0",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-junctions": "^0.5.0",
+        "react-router-dom": "^4.3.1",
+        "react-scripts": "^3.0.1",
+        "react-window": "^1.8.2"
+    },
+    "homepage": "http://./",
+    "scripts": {
+        "https": "set HTTPS=true&&npm start",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "buildCache": "react-scripts build && sw-precache --config=sw-precache-config.js",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "sw-precache": "^5.2.1"
+    }
 }
