--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "react-junctions": "^0.5.0",
         "react-router-dom": "^4.3.1",
         "react-scripts": "^3.0.1",
+        "react-virtualized-auto-sizer": "^1.0.2",
         "react-window": "^1.8.2"
     },
     "homepage": "http://./",
