--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@material-ui/core": "^4.1.1",
-        "@material-ui/icons": "^4.2.0",
+        "@material-ui/core": "^4.2.0",
+        "@material-ui/icons": "^4.2.1",
         "idb-keyval": "^3.2.0",
         "node-sass": "^4.12.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
+        "react-intersection-observer": "^8.23.0",
         "react-junctions": "^0.5.0",
-        "react-router-dom": "^4.3.1",
-        "react-scripts": "^3.0.1",
-        "react-virtualized-auto-sizer": "^1.0.2",
-        "react-window": "^1.8.2"
+        "react-router-dom": "^5.0.1",
+        "react-scripts": "^3.0.1"
     },
     "homepage": "http://./",
     "scripts": {
