--- a/package.json
+++ b/package.json
@@ -3,25 +3,28 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@material-ui/core": "^4.2.0",
-        "@material-ui/icons": "^4.2.1",
+        "antd": "^4.0.2",
+        "antd-mobile": "^2.3.1",
+        "customize-cra": "^0.9.1",
         "idb-keyval": "^3.2.0",
-        "node-sass": "^4.12.0",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "react-intersection-observer": "^8.23.0",
+        "node-sass": "^4.13.1",
+        "react": "^16.13.0",
+        "react-app-rewired": "^2.1.5",
+        "react-dom": "^16.13.0",
+        "react-helmet": "^5.2.1",
+        "react-intersection-observer": "^8.26.1",
         "react-junctions": "^0.5.0",
-        "react-loader-spinner": "^2.3.0",
-        "react-router-dom": "^5.0.1",
-        "react-scripts": "^3.0.1"
+        "react-loader-spinner": "^3.1.5",
+        "react-router-dom": "^5.1.2",
+        "react-scripts": "^3.4.0"
     },
-    "homepage": "http://./",
+    "homepage": "./",
     "scripts": {
         "https": "set HTTPS=true&&npm start",
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "buildCache": "react-scripts build && sw-precache --config=sw-precache-config.js",
-        "test": "react-scripts test",
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "buildCache": "react-app-rewired build && sw-precache --config=sw-precache-config.js",
+        "test": "react-app-rewired test",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -40,6 +43,7 @@
         ]
     },
     "devDependencies": {
-        "sw-precache": "^5.2.1"
+        "sw-precache": "^5.2.1",
+        "babel-plugin-import": "^1.13.0"
     }
 }
