Removed antd-mobile Attempts at fixing sticky footer isues Custom hook additions Manifest changes

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,3 @@
 {
-    "plugins": [
-        ["import", { "libraryName": "antd", "libraryDirectory": "lib", "style": "css" }, "antd"],
-        ["import", { "libraryName": "antd-mobile", "libraryDirectory": "lib", "style": "css" }, "ant-mobile"]
-    ]
+    "plugins": [["import", { "libraryName": "antd", "libraryDirectory": "lib", "style": "css" }, "antd"]]
 }
