--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "antd": "^4.0.2",
-        "antd-mobile": "^2.3.1",
+        "@n8tb1t/use-scroll-position": "^1.0.43",
+        "antd": "^4.0.3",
         "customize-cra": "^0.9.1",
         "idb-keyval": "^3.2.0",
         "node-sass": "^4.13.1",
-        "react": "^16.13.0",
+        "react": "^16.13.1",
         "react-app-rewired": "^2.1.5",
-        "react-dom": "^16.13.0",
+        "react-dom": "^16.13.1",
         "react-helmet": "^5.2.1",
         "react-intersection-observer": "^8.26.1",
         "react-junctions": "^0.5.0",
         "react-loader-spinner": "^3.1.5",
+        "react-recipes": "^1.0.0",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "^3.4.0"
+        "react-scripts": "^3.4.1"
     },
     "homepage": "./",
     "scripts": {
