--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,30 +1,32 @@
 {
-  "short_name": "Hymnal PWA",
-  "name": "Hymnal Progressive Web App",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "launcher-144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "launcher-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "launcher-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+    "short_name": "Hymnal",
+    "name": "Hymns for all Times",
+    "description": "A Hymnal Web App with offline support",
+    "icons": [
+        {
+            "src": "favicon.ico",
+            "sizes": "64x64",
+            "type": "image/x-icon"
+        },
+        {
+            "src": "launcher-144.png",
+            "sizes": "144x144",
+            "type": "image/png"
+        },
+        {
+            "src": "launcher-192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "launcher-512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ],
+    "orientation": "portrait-primary",
+    "start_url": ".",
+    "display": "minimal-ui",
+    "theme_color": "#1890ff",
+    "background_color": "#ffffff"
 }
