--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "react": "^16.13.1",
         "react-app-rewired": "^2.1.5",
         "react-dom": "^16.13.1",
-        "react-helmet": "^5.2.1",
+        "react-helmet": "6.0.0-beta.2",
         "react-intersection-observer": "^8.26.1",
         "react-junctions": "^0.5.0",
         "react-loader-spinner": "^3.1.5",
