--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "antd": "^4.0.3",
         "customize-cra": "^0.9.1",
         "idb-keyval": "^3.2.0",
+        "lodash": "^4.17.15",
         "node-sass": "^4.13.1",
         "react": "^16.13.1",
         "react-app-rewired": "^2.1.5",
