--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
     "private": true,
     "dependencies": {
         "@n8tb1t/use-scroll-position": "^1.0.43",
-        "antd": "^4.0.3",
-        "customize-cra": "^0.9.1",
+        "antd": "^4.3.4",
+        "customize-cra": "^1.0.0",
         "idb-keyval": "^3.2.0",
         "lodash": "^4.17.15",
-        "node-sass": "^4.13.1",
+        "node-sass": "^4.14.1",
         "react": "^16.13.1",
-        "react-app-rewired": "^2.1.5",
+        "react-app-rewired": "^2.1.6",
         "react-dom": "^16.13.1",
-        "react-helmet": "6.0.0-beta.2",
-        "react-intersection-observer": "^8.26.1",
+        "react-helmet": "^6.1.0",
+        "react-intersection-observer": "^8.26.2",
         "react-junctions": "^0.5.0",
-        "react-loader-spinner": "^3.1.5",
-        "react-recipes": "^1.0.0",
-        "react-router-dom": "^5.1.2",
+        "react-loader-spinner": "^3.1.14",
+        "react-recipes": "^1.0.2",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.1"
     },
     "homepage": "/",
