* Added virtualized list for better performance * Adjusted styling to work with virtualized list * Added new filter menu * Other tweaks and improvements to rendering and data flow

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,12 +1,10 @@
 {
-    "compilerOptions": {
-        "esModuleInterop": true,
-        "checkJs": true,
-        "jsx": "preserve",
-        "target": "es2018",
-        "module": "commonJS",
-        "baseUrl": "src"
-    },
-    "exclude": ["node_modules", "**/node_modules/*"],
-    "typeAcquisition": { "enable": true }
+	"compilerOptions": {
+		"checkJs": true,
+		"jsx": "preserve",
+		"target": "es2018",
+		"module": "commonJS",
+		"baseUrl": "src"
+	},
+	"exclude": ["node_modules", "**/node_modules/*"]
 }
