--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "react-loader-spinner": "^3.1.14",
         "react-recipes": "^1.0.2",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^3.4.1"
+        "react-scripts": "^3.4.1",
+        "react-virtualized-auto-sizer": "^1.0.2",
+        "react-window": "^1.8.5"
     },
     "homepage": "/",
     "scripts": {
