--- a/package.json
+++ b/package.json
@@ -1,53 +1,55 @@
 {
-    "name": "hymnal",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@n8tb1t/use-scroll-position": "^1.0.43",
-        "antd": "^4.3.4",
-        "customize-cra": "^1.0.0",
-        "idb-keyval": "^3.2.0",
-        "lodash": "^4.17.15",
-        "node-sass": "^4.14.1",
-        "react": "^16.13.1",
-        "react-app-rewired": "^2.1.6",
-        "react-dom": "^16.13.1",
-        "react-helmet": "^6.1.0",
-        "react-intersection-observer": "^8.26.2",
-        "react-junctions": "^0.5.0",
-        "react-loader-spinner": "^3.1.14",
-        "react-recipes": "^1.0.2",
-        "react-router-dom": "^5.2.0",
-        "react-scripts": "^3.4.1",
-        "react-virtualized-auto-sizer": "^1.0.2",
-        "react-window": "^1.8.5"
-    },
-    "homepage": "/",
-    "scripts": {
-        "https": "set HTTPS=true&&npm start",
-        "start": "react-app-rewired start",
-        "build": "react-app-rewired build",
-        "buildCache": "react-app-rewired build && sw-precache --config=sw-precache-config.js",
-        "test": "react-app-rewired test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "sw-precache": "^5.2.1",
-        "babel-plugin-import": "^1.13.0"
-    }
+	"name": "hymnal",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@n8tb1t/use-scroll-position": "^1.0.43",
+		"antd": "^4.4.2",
+		"customize-cra": "^1.0.0",
+		"idb-keyval": "^3.2.0",
+		"node-sass": "^4.14.1",
+		"react": "^16.13.1",
+		"react-app-polyfill": "^1.0.6",
+		"react-app-rewired": "^2.1.6",
+		"react-dom": "^16.13.1",
+		"react-helmet": "^6.1.0",
+		"react-intersection-observer": "^8.26.2",
+		"react-junctions": "^0.5.0",
+		"react-loader-spinner": "^3.1.14",
+		"react-recipes": "^1.1.0",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "^3.4.1",
+		"react-virtualized-auto-sizer": "^1.0.2",
+		"react-window": "^1.8.5"
+	},
+	"homepage": ".",
+	"scripts": {
+		"https": "set HTTPS=true&&npm start",
+		"start": "react-app-rewired start",
+		"build": "react-app-rewired build",
+		"build-cache": "react-app-rewired build && sw-precache --config=sw-precache-config.js",
+		"test": "react-app-rewired test",
+		"eject": "react-scripts eject",
+		"remote-debug": "remotedebug_ios_webkit_adapter --port=9000"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"safari 10",
+			"ios_saf 10"
+		]
+	},
+	"devDependencies": {
+		"sw-precache": "^5.2.1",
+		"babel-plugin-import": "^1.13.0"
+	}
 }
