--- a/package.json
+++ b/package.json
@@ -3,33 +3,38 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@n8tb1t/use-scroll-position": "^1.0.43",
-		"antd": "^4.6.2",
-		"customize-cra": "^1.0.0",
-		"idb-keyval": "^3.2.0",
-		"node-sass": "^4.14.1",
-		"react": "^16.13.1",
-		"react-app-polyfill": "^1.0.6",
-		"react-app-rewired": "^2.1.6",
-		"react-dom": "^16.13.1",
+		"@chakra-ui/react": "^1.3.4",
+		"@emotion/react": "^11.1.5",
+		"@emotion/styled": "^11.1.5",
+		"@n8tb1t/use-scroll-position": "^2.0.3",
+		"axios": "^0.21.1",
+		"focus-visible": "^5.2.0",
+		"framer-motion": "3.10.6",
+		"idb-keyval": "^5.0.4",
+		"react": "^17.0.1",
+		"react-app-polyfill": "^2.0.0",
+		"react-device-detect": "^1.17.0",
+		"react-dom": "^17.0.1",
 		"react-helmet": "^6.1.0",
-		"react-intersection-observer": "^8.27.1",
+		"react-icons": "^4.2.0",
+		"react-intersection-observer": "^8.31.0",
 		"react-junctions": "^0.5.0",
-		"react-loader-spinner": "^3.1.14",
-		"react-recipes": "^1.1.0",
+		"react-loader-spinner": "^4.0.0",
+		"react-recipes": "^1.1.1",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "^3.4.3",
-		"react-virtualized-auto-sizer": "^1.0.2",
-		"react-window": "^1.8.5"
+		"react-scripts": "^4.0.3",
+		"react-virtualized-auto-sizer": "^1.0.5",
+		"react-window": "^1.8.6",
+		"sass": "^1.32.8"
 	},
 	"homepage": ".",
 	"scripts": {
-		"https": "set HTTPS=true&&npm start",
-		"start": "react-app-rewired start",
-		"build": "react-app-rewired build",
-		"build-cache": "react-app-rewired build && sw-precache --config=sw-precache-config.js",
-		"test": "react-app-rewired test",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"postbuild": "react-snap",
+		"test": "react-scripts test",
 		"eject": "react-scripts eject",
+		"install:fe": "yarn install",
 		"remote-debug": "remotedebug_ios_webkit_adapter --port=9000"
 	},
 	"eslintConfig": {
@@ -49,7 +54,17 @@
 		]
 	},
 	"devDependencies": {
+		"@tsconfig/recommended": "^1.0.1",
+		"@types/jest": "^26.0.21",
+		"@types/node": "^14.14.35",
+		"@types/react": "^17.0.3",
+		"@types/react-dom": "^17.0.2",
+		"@types/react-helmet": "^6.1.0",
+		"@types/react-router-dom": "^5.1.7",
+		"@types/react-virtualized-auto-sizer": "^1.0.0",
+		"@types/react-window": "^1.8.2",
+		"react-snap": "^1.23.0",
 		"sw-precache": "^5.2.1",
-		"babel-plugin-import": "^1.13.0"
+		"typescript": "^4.2.3"
 	}
 }
