--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
 		]
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.11.9",
+		"@testing-library/react": "^11.2.5",
 		"@tsconfig/recommended": "^1.0.1",
 		"@types/jest": "^26.0.21",
 		"@types/node": "^14.14.35",
