Styling and loading improvements * Lazy loaded some more components * Increased bottom padding when on mobile * Preload of css fonts * Started adding tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
 		"exclude": ["dotenv"]
 	},
 	"include": ["src/**/*"],
-	"exclude": ["**/*.test.ts", "**/node_modules/**/*", "**/chrome_local/**/*"]
+	"exclude": ["**/node_modules/**/*", "**/chrome_local/**/*"]
 }
