--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@chakra-ui/react": "^1.3.4",
+		"@chakra-ui/react": "^1.5.1",
 		"@emotion/react": "^11.1.5",
-		"@emotion/styled": "^11.1.5",
+		"@emotion/styled": "^11.3.0",
 		"focus-visible": "^5.2.0",
-		"framer-motion": "^4.0.3",
+		"framer-motion": "^4.1.4",
 		"fuse.js": "^6.4.6",
 		"localforage": "^1.9.0",
 		"react": "^17.0.1",
@@ -24,8 +24,8 @@
 		"react-scripts": "^4.0.3",
 		"react-virtualized-auto-sizer": "^1.0.5",
 		"react-window": "^1.8.6",
-		"sass": "^1.32.8",
-		"use-debounce": "^6.0.0"
+		"sass": "^1.32.10",
+		"use-debounce": "^6.0.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -55,17 +55,20 @@
 		"@testing-library/react": "^11.2.5",
 		"@tsconfig/recommended": "^1.0.1",
 		"@types/jest": "^26.0.21",
-		"@types/node": "^14.14.35",
+		"@types/node": "^14.14.41",
 		"@types/react": "^17.0.3",
 		"@types/react-dom": "^17.0.2",
-		"@types/react-helmet": "^6.1.0",
+		"@types/react-helmet": "^6.1.1",
 		"@types/react-router-dom": "^5.1.7",
 		"@types/react-virtualized-auto-sizer": "^1.0.0",
 		"@types/react-window": "^1.8.2",
 		"progress-bar-webpack-plugin": "^2.1.0",
 		"react-snap": "^1.23.0",
 		"sw-precache": "^5.2.1",
-		"typescript": "^4.2.3",
-		"webpack-bundle-analyzer": "^4.4.0"
+		"typescript": "^4.2.4",
+		"webpack-bundle-analyzer": "^4.4.1"
+	},
+	"jest": {
+		"clearMocks": true
 	}
 }
