--- a/package.json
+++ b/package.json
@@ -3,29 +3,30 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@chakra-ui/react": "^1.5.1",
-		"@emotion/react": "^11.1.5",
-		"@emotion/styled": "^11.3.0",
-		"focus-visible": "^5.2.0",
-		"framer-motion": "^4.1.4",
-		"fuse.js": "^6.4.6",
-		"localforage": "^1.9.0",
-		"react": "^17.0.1",
-		"react-app-polyfill": "^2.0.0",
-		"react-device-detect": "^1.17.0",
-		"react-dom": "^17.0.1",
-		"react-helmet": "^6.1.0",
-		"react-icons": "^4.2.0",
-		"react-intersection-observer": "^8.31.0",
-		"react-junctions": "^0.5.0",
-		"react-loader-spinner": "^4.0.0",
-		"react-recipes": "^1.1.1",
-		"react-router-dom": "^5.2.0",
-		"react-scripts": "^4.0.3",
-		"react-virtualized-auto-sizer": "^1.0.5",
-		"react-window": "^1.8.6",
-		"sass": "^1.32.10",
-		"use-debounce": "^7.0.0"
+		"@chakra-ui/react": "1.6.9",
+		"@emotion/react": "11.4.1",
+		"@emotion/styled": "11.3.0",
+		"classnames": "^2.3.1",
+		"focus-visible": "5.2.0",
+		"framer-motion": "4.1.17",
+		"fuse.js": "6.4.6",
+		"localforage": "1.10.0",
+		"react": "17.0.2",
+		"react-app-polyfill": "2.0.0",
+		"react-device-detect": "1.17.0",
+		"react-dom": "17.0.2",
+		"react-helmet": "6.1.0",
+		"react-icons": "4.3.1",
+		"react-intersection-observer": "8.32.1",
+		"react-junctions": "0.5.0",
+		"react-loader-spinner": "4.0.0",
+		"react-recipes": "1.4.0",
+		"react-router-dom": "5.3.0",
+		"react-scripts": "4.0.3",
+		"react-virtualized-auto-sizer": "1.0.6",
+		"react-window": "1.8.6",
+		"sass": "1.42.1",
+		"use-debounce": "7.0.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -33,9 +34,6 @@
 		"test": "react-scripts test",
 		"serve": "serve -s build",
 		"analyze": "node scripts/analyze.js"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
 	},
 	"browserslist": {
 		"production": [
@@ -46,29 +44,45 @@
 		"development": [
 			"last 1 chrome version",
 			"last 1 firefox version",
-			"safari 10",
-			"ios_saf 10"
+			"safari 11",
+			"ios_saf 11"
 		]
 	},
 	"devDependencies": {
-		"@testing-library/jest-dom": "^5.11.9",
-		"@testing-library/react": "^12.0.0",
-		"@tsconfig/recommended": "^1.0.1",
-		"@types/jest": "^26.0.21",
-		"@types/node": "^15.12.2",
-		"@types/react": "^17.0.3",
-		"@types/react-dom": "^17.0.2",
-		"@types/react-helmet": "^6.1.1",
-		"@types/react-router-dom": "^5.1.7",
-		"@types/react-virtualized-auto-sizer": "^1.0.0",
-		"@types/react-window": "^1.8.2",
-		"progress-bar-webpack-plugin": "^2.1.0",
-		"react-snap": "^1.23.0",
-		"sw-precache": "^5.2.1",
-		"typescript": "^4.2.4",
-		"webpack-bundle-analyzer": "^4.4.1"
+		"@testing-library/jest-dom": "5.14.1",
+		"@testing-library/react": "12.1.2",
+		"@testing-library/user-event": "13.2.1",
+		"@tsconfig/recommended": "1.0.1",
+		"@types/jest": "27.0.2",
+		"@types/node": "16.10.3",
+		"@types/react": "17.0.27",
+		"@types/react-dom": "17.0.9",
+		"@types/react-helmet": "6.1.3",
+		"@types/react-router-dom": "5.3.1",
+		"@types/react-virtualized-auto-sizer": "1.0.1",
+		"@types/react-window": "1.8.5",
+		"@typescript-eslint/parser": "4.32.0",
+		"eslint": "7.32.0",
+		"eslint-config-airbnb": "18.2.1",
+		"eslint-config-airbnb-typescript": "14.0.1",
+		"eslint-config-prettier": "8.3.0",
+		"eslint-plugin-import": "2.22.1",
+		"eslint-plugin-jsx-a11y": "6.4.1",
+		"eslint-plugin-react": "7.26.1",
+		"eslint-plugin-react-hooks": "1.7.0",
+		"eslint-plugin-testing-library": "4.12.4",
+		"prettier": "2.4.1",
+		"progress-bar-webpack-plugin": "2.1.0",
+		"react-snap": "1.23.0",
+		"typescript": "4.4.3",
+		"webpack-bundle-analyzer": "4.4.2"
+	},
+	"resolutions": {
+		"eslint-plugin-testing-library": "4.12.4",
+		"@typescript-eslint/parser": "4.32.0",
+		"typescript": "4.4.3"
 	},
 	"jest": {
-		"clearMocks": true
+		"clearMocks": false
 	}
 }
