--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
 	"extends": "@tsconfig/recommended/tsconfig.json",
 	"compilerOptions": {
-		"skipLibCheck": true,
 		"jsx": "react-jsx",
 		"baseUrl": "src",
-		"lib": ["dom", "dom.iterable", "esnext"],
+		"lib": ["DOM", "ESNext"],
 		"allowJs": true,
 		"allowSyntheticDefaultImports": true,
 		"noFallthroughCasesInSwitch": true,
@@ -18,6 +17,6 @@
 		"enable": true,
 		"exclude": ["dotenv"]
 	},
-	"include": ["src/**/*"],
+	"include": ["./src/**/*"],
 	"exclude": ["**/node_modules/**/*", "**/chrome_local/**/*"]
 }
