--- a/.eslintrc
+++ b/.eslintrc
@@ -34,7 +34,8 @@
 		"import/no-extraneous-dependencies": "off",
 		"react/jsx-props-no-spreading": "off",
 		"react/jsx-no-bind": "off",
-		"react/prop-types": "off"
+		"react/prop-types": "off",
+		"react/function-component-definition": "off"
 	},
 	"overrides": [
 		{
