--- a/package.json
+++ b/package.json
@@ -3,30 +3,31 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@chakra-ui/react": "1.6.9",
-		"@emotion/react": "11.4.1",
-		"@emotion/styled": "11.3.0",
-		"classnames": "^2.3.1",
+		"@chakra-ui/react": "2.2.4",
+		"@emotion/react": "11.9.3",
+		"@emotion/styled": "11.9.3",
+		"axios": "0.27.2",
+		"classnames": "2.3.1",
 		"focus-visible": "5.2.0",
-		"framer-motion": "4.1.17",
-		"fuse.js": "6.4.6",
+		"framer-motion": "6.5.1",
+		"fuse.js": "6.6.2",
 		"localforage": "1.10.0",
-		"react": "17.0.2",
-		"react-app-polyfill": "2.0.0",
-		"react-device-detect": "1.17.0",
-		"react-dom": "17.0.2",
+		"react": "18.2.0",
+		"react-app-polyfill": "3.0.0",
+		"react-device-detect": "2.2.2",
+		"react-dom": "18.2.0",
 		"react-helmet": "6.1.0",
-		"react-icons": "4.3.1",
-		"react-intersection-observer": "8.32.1",
+		"react-icons": "4.4.0",
+		"react-intersection-observer": "9.3.5",
 		"react-junctions": "0.5.0",
-		"react-loader-spinner": "4.0.0",
+		"react-loader-spinner": "5.1.5",
 		"react-recipes": "1.4.0",
-		"react-router-dom": "5.3.0",
-		"react-scripts": "4.0.3",
+		"react-router-dom": "6.3.0",
+		"react-scripts": "5.0.1",
 		"react-virtualized-auto-sizer": "1.0.6",
-		"react-window": "1.8.6",
-		"sass": "1.42.1",
-		"use-debounce": "7.0.0"
+		"react-window": "1.8.7",
+		"sass": "1.53.0",
+		"use-debounce": "8.0.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -49,38 +50,38 @@
 		]
 	},
 	"devDependencies": {
-		"@testing-library/jest-dom": "5.14.1",
-		"@testing-library/react": "12.1.2",
-		"@testing-library/user-event": "13.2.1",
+		"@testing-library/jest-dom": "5.16.4",
+		"@testing-library/react": "13.3.0",
+		"@testing-library/user-event": "14.2.5",
 		"@tsconfig/recommended": "1.0.1",
-		"@types/jest": "27.0.2",
-		"@types/node": "16.10.3",
-		"@types/react": "17.0.27",
-		"@types/react-dom": "17.0.9",
-		"@types/react-helmet": "6.1.3",
-		"@types/react-router-dom": "5.3.1",
+		"@types/jest": "28.1.6",
+		"@types/node": "18.0.5",
+		"@types/react": "18.0.15",
+		"@types/react-dom": "18.0.6",
+		"@types/react-helmet": "6.1.5",
+		"@types/react-router-dom": "5.3.3",
 		"@types/react-virtualized-auto-sizer": "1.0.1",
 		"@types/react-window": "1.8.5",
-		"@typescript-eslint/parser": "4.32.0",
-		"eslint": "7.32.0",
-		"eslint-config-airbnb": "18.2.1",
-		"eslint-config-airbnb-typescript": "14.0.1",
-		"eslint-config-prettier": "8.3.0",
-		"eslint-plugin-import": "2.22.1",
-		"eslint-plugin-jsx-a11y": "6.4.1",
-		"eslint-plugin-react": "7.26.1",
-		"eslint-plugin-react-hooks": "1.7.0",
-		"eslint-plugin-testing-library": "4.12.4",
-		"prettier": "2.4.1",
+		"@typescript-eslint/parser": "5.30.6",
+		"eslint": "8.20.0",
+		"eslint-config-airbnb": "19.0.4",
+		"eslint-config-airbnb-typescript": "17.0.0",
+		"eslint-config-prettier": "8.5.0",
+		"eslint-plugin-import": "2.26.0",
+		"eslint-plugin-jsx-a11y": "6.6.0",
+		"eslint-plugin-react": "7.30.1",
+		"eslint-plugin-react-hooks": "4.6.0",
+		"eslint-plugin-testing-library": "5.5.1",
+		"jest-environment-jsdom": "28.1.3",
+		"prettier": "2.7.1",
 		"progress-bar-webpack-plugin": "2.1.0",
 		"react-snap": "1.23.0",
-		"typescript": "4.4.3",
-		"webpack-bundle-analyzer": "4.4.2"
+		"typescript": "4.7.4",
+		"webpack-bundle-analyzer": "4.5.0"
 	},
 	"resolutions": {
-		"eslint-plugin-testing-library": "4.12.4",
-		"@typescript-eslint/parser": "4.32.0",
-		"typescript": "4.4.3"
+		"@types/react": "18.0.15",
+		"@types/react-dom": "18.0.6"
 	},
 	"jest": {
 		"clearMocks": false
