--- a/.eslintrc
+++ b/.eslintrc
@@ -24,11 +24,11 @@
 		"airbnb",
 		"airbnb-typescript",
 		"airbnb/hooks",
-		// "plugin:react/jsx-runtime",
 		"plugin:import/typescript",
 		"prettier"
 	],
 	"rules": {
+		"react/react-in-jsx-scope": "off",
 		"react/jsx-filename-extension": [1, { "extensions": [".tsx", ".jsx"] }],
 		"import/extensions": "off",
 		"import/no-extraneous-dependencies": "off",
