--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"test": "react-scripts test --transformIgnorePatterns \"/node_modules/(?!axios).+\\.js$\"",
 		"serve": "serve -s build",
 		"analyze": "node scripts/analyze.js"
 	},
@@ -50,6 +50,7 @@
 		"use-debounce": "10.0.0"
 	},
 	"devDependencies": {
+		"@babel/plugin-proposal-private-property-in-object": "7.21.11",
 		"@testing-library/jest-dom": "5.16.4",
 		"@testing-library/react": "13.3.0",
 		"@testing-library/user-event": "14.5.1",
@@ -73,7 +74,9 @@
 		"eslint-plugin-react": "7.33.2",
 		"eslint-plugin-react-hooks": "4.6.0",
 		"eslint-plugin-testing-library": "6.1.2",
+		"jest": "^29.7.0",
 		"jest-environment-jsdom": "29.7.0",
+		"jest-watch-typeahead": "^2.2.2",
 		"prettier": "3.1.0",
 		"progress-bar-webpack-plugin": "2.1.0",
 		"react-snap": "1.23.0",
