--- a/package.json
+++ b/package.json
@@ -2,40 +2,12 @@
 	"name": "hymnal",
 	"version": "0.1.0",
 	"private": true,
-	"dependencies": {
-		"@chakra-ui/react": "^1.5.1",
-		"@emotion/react": "^11.1.5",
-		"@emotion/styled": "^11.3.0",
-		"focus-visible": "^5.2.0",
-		"framer-motion": "^4.1.4",
-		"fuse.js": "^6.4.6",
-		"localforage": "^1.9.0",
-		"react": "^17.0.1",
-		"react-app-polyfill": "^2.0.0",
-		"react-device-detect": "^1.17.0",
-		"react-dom": "^17.0.1",
-		"react-helmet": "^6.1.0",
-		"react-icons": "^4.2.0",
-		"react-intersection-observer": "^8.31.0",
-		"react-junctions": "^0.5.0",
-		"react-loader-spinner": "^4.0.0",
-		"react-recipes": "^1.1.1",
-		"react-router-dom": "^5.2.0",
-		"react-scripts": "^4.0.3",
-		"react-virtualized-auto-sizer": "^1.0.5",
-		"react-window": "^1.8.6",
-		"sass": "^1.32.10",
-		"use-debounce": "^6.0.1"
-	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"test": "react-scripts test --transformIgnorePatterns \"/node_modules/(?!axios).+\\.js$\"",
 		"serve": "serve -s build",
 		"analyze": "node scripts/analyze.js"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
 	},
 	"browserslist": {
 		"production": [
@@ -46,29 +18,72 @@
 		"development": [
 			"last 1 chrome version",
 			"last 1 firefox version",
-			"safari 10",
-			"ios_saf 10"
+			"safari 11",
+			"ios_saf 11"
 		]
 	},
+	"dependencies": {
+		"@chakra-ui/react": "2.8.2",
+		"@emotion/react": "11.11.1",
+		"@emotion/styled": "11.11.0",
+		"axios": "1.6.2",
+		"classnames": "2.3.2",
+		"focus-visible": "5.2.0",
+		"framer-motion": "10.16.5",
+		"fuse.js": "7.0.0",
+		"localforage": "1.10.0",
+		"react": "18.2.0",
+		"react-app-polyfill": "3.0.0",
+		"react-device-detect": "2.2.3",
+		"react-dom": "18.2.0",
+		"react-helmet": "6.1.0",
+		"react-icons": "4.4.0",
+		"react-intersection-observer": "9.3.5",
+		"react-junctions": "0.5.0",
+		"react-loader-spinner": "5.1.5",
+		"react-recipes": "1.5.0",
+		"react-router-dom": "6.19.0",
+		"react-scripts": "5.0.1",
+		"react-virtualized-auto-sizer": "1.0.20",
+		"react-window": "1.8.9",
+		"sass": "1.69.5",
+		"use-debounce": "10.0.0"
+	},
 	"devDependencies": {
-		"@testing-library/jest-dom": "^5.11.9",
-		"@testing-library/react": "^11.2.5",
-		"@tsconfig/recommended": "^1.0.1",
-		"@types/jest": "^26.0.21",
-		"@types/node": "^14.14.41",
-		"@types/react": "^17.0.3",
-		"@types/react-dom": "^17.0.2",
-		"@types/react-helmet": "^6.1.1",
-		"@types/react-router-dom": "^5.1.7",
-		"@types/react-virtualized-auto-sizer": "^1.0.0",
-		"@types/react-window": "^1.8.2",
-		"progress-bar-webpack-plugin": "^2.1.0",
-		"react-snap": "^1.23.0",
-		"sw-precache": "^5.2.1",
-		"typescript": "^4.2.4",
-		"webpack-bundle-analyzer": "^4.4.1"
+		"@babel/plugin-proposal-private-property-in-object": "7.21.11",
+		"@testing-library/jest-dom": "5.16.4",
+		"@testing-library/react": "13.3.0",
+		"@testing-library/user-event": "14.5.1",
+		"@tsconfig/recommended": "1.0.3",
+		"@types/jest": "28.1.6",
+		"@types/node": "20.9.2",
+		"@types/react": "18.2.37",
+		"@types/react-dom": "18.2.15",
+		"@types/react-helmet": "6.1.9",
+		"@types/react-router-dom": "5.3.3",
+		"@types/react-virtualized-auto-sizer": "1.0.3",
+		"@types/react-window": "1.8.8",
+		"@typescript-eslint/eslint-plugin": "6.11.0",
+		"@typescript-eslint/parser": "6.11.0",
+		"eslint": "8.54.0",
+		"eslint-config-airbnb": "19.0.4",
+		"eslint-config-airbnb-typescript": "17.1.0",
+		"eslint-config-prettier": "9.0.0",
+		"eslint-plugin-import": "2.29.0",
+		"eslint-plugin-jsx-a11y": "6.8.0",
+		"eslint-plugin-react": "7.33.2",
+		"eslint-plugin-react-hooks": "4.6.0",
+		"eslint-plugin-testing-library": "6.1.2",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "29.7.0",
+		"jest-watch-typeahead": "^2.2.2",
+		"prettier": "3.1.0",
+		"progress-bar-webpack-plugin": "2.1.0",
+		"react-snap": "1.23.0",
+		"typescript": "5.2.2",
+		"webpack-bundle-analyzer": "4.5.0"
 	},
 	"jest": {
-		"clearMocks": true
+		"clearMocks": false
 	}
 }
