--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "hymnal",
-	"version": "0.1.0",
+	"version": "1.0.0",
 	"private": true,
 	"scripts": {
 		"start": "react-scripts start",
@@ -26,9 +26,9 @@
 		"@chakra-ui/react": "2.8.2",
 		"@emotion/react": "11.11.1",
 		"@emotion/styled": "11.11.0",
-		"axios": "1.6.2",
-		"classnames": "2.3.2",
-		"focus-visible": "5.2.0",
+		"axios": "1.7.9",
+		"classnames": "2.5.1",
+		"focus-visible": "5.2.1",
 		"framer-motion": "10.16.5",
 		"fuse.js": "7.0.0",
 		"localforage": "1.10.0",
@@ -51,6 +51,7 @@
 	},
 	"devDependencies": {
 		"@babel/plugin-proposal-private-property-in-object": "7.21.11",
+		"@eslint/js": "9.18.0",
 		"@testing-library/jest-dom": "5.16.4",
 		"@testing-library/react": "13.3.0",
 		"@testing-library/user-event": "14.5.1",
@@ -63,25 +64,27 @@
 		"@types/react-router-dom": "5.3.3",
 		"@types/react-virtualized-auto-sizer": "1.0.3",
 		"@types/react-window": "1.8.8",
-		"@typescript-eslint/eslint-plugin": "6.11.0",
-		"@typescript-eslint/parser": "6.11.0",
-		"eslint": "8.54.0",
-		"eslint-config-airbnb": "19.0.4",
-		"eslint-config-airbnb-typescript": "17.1.0",
-		"eslint-config-prettier": "9.0.0",
-		"eslint-plugin-import": "2.29.0",
-		"eslint-plugin-jsx-a11y": "6.8.0",
-		"eslint-plugin-react": "7.33.2",
-		"eslint-plugin-react-hooks": "4.6.0",
-		"eslint-plugin-testing-library": "6.1.2",
-		"jest": "^29.7.0",
+		"@typescript-eslint/eslint-plugin": "8.19.1",
+		"@typescript-eslint/parser": "8.19.1",
+		"eslint": "9.18.0",
+		"eslint-config-prettier": "9.1.0",
+		"eslint-plugin-import": "2.31.0",
+		"eslint-plugin-jest": "28.10.0",
+		"eslint-plugin-jsx-a11y": "6.10.2",
+		"eslint-plugin-prettier": "5.2.1",
+		"eslint-plugin-react": "7.37.3",
+		"eslint-plugin-react-hooks": "5.1.0",
+		"eslint-plugin-testing-library": "7.1.1",
+		"globals": "15.14.0",
+		"jest": "29.7.0",
 		"jest-environment-jsdom": "29.7.0",
-		"jest-watch-typeahead": "^2.2.2",
-		"prettier": "3.1.0",
+		"jest-watch-typeahead": "2.2.2",
+		"prettier": "3.4.2",
 		"progress-bar-webpack-plugin": "2.1.0",
 		"react-snap": "1.23.0",
-		"typescript": "5.2.2",
-		"webpack-bundle-analyzer": "4.5.0"
+		"typescript": "5.7.3",
+		"typescript-eslint": "8.19.1",
+		"webpack-bundle-analyzer": "4.10.2"
 	},
 	"jest": {
 		"clearMocks": false
