--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
 		"allowJs": true,
 		"allowSyntheticDefaultImports": true,
 		"noFallthroughCasesInSwitch": true,
-		"module": "esnext",
-		"moduleResolution": "node",
+		"module": "ES2020",
+		"moduleResolution": "bundler",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true
@@ -17,6 +17,6 @@
 		"enable": true,
 		"exclude": ["dotenv"]
 	},
-	"include": ["./src/**/*"],
+	"include": ["./src/**/*", "**/eslint.config.mjs"],
 	"exclude": ["**/node_modules/**/*", "**/chrome_local/**/*"]
 }
