--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"dependencies": {
 		"@mantine/core": "8.1.2",
 		"@mantine/hooks": "8.1.2",
+		"@types/react-window": "^1.8.8",
 		"axios": "1.7.9",
 		"classnames": "2.5.1",
 		"focus-visible": "5.2.1",
