--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,6 @@
 {
   "extends": ["stylelint-config-standard-scss"],
+  "ignoreFiles": ["dist/**/*"],
   "rules": {
     "custom-property-pattern": null,
     "selector-class-pattern": null,
